src/components/modules/PageLayout/submodules/RemindingFooter/style.css
.box {
  width: 100%;
  background-color: white;
  display: flex;
  justify-content: center;
  height: auto;
}

.childContainer {
  padding: 3% 5%;
  display: flex;
  flex-direction: row;
  width: 100%;
  max-width: 1500px;
}

.firstColumn {
  width: 49%;
  height: 100%;
  border-right: 1px solid var(--text-color);
  padding-right: 5%;
}

.secondColumn {
  width: 45%;
  min-height: 100%;
  padding-left: 5%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
}

.firstColumn > h2,
.secondColumn > div > h2 {
     text-align: left;
}

.link {
     text-decoration: underline;
     color: var(--primary-blue);
}

.link:hover {
     color: #1E6AB1;
}

@media(max-width: 768px) {
     .childContainer {
          flex-direction: column;
          font-size: 90%;
     }
     
     .firstColumn {
          width: 100%;
          border-right: none;
          border-bottom: 1px solid #00000030;
          text-align: center;
          padding-right: 0;
          padding-bottom: 5%;
     }

     .firstColumn > h2,
     .firstColumn > p,
     .secondColumn > h2,
     .secondColumn > p {
          text-align: center;
     }

     .secondColumn {
          width: 100%;
          justify-content: center;
          align-items: center;
          text-align: center;
          padding-left: 0;
          padding: 5% 0;
          min-height: auto;
     }
}

